--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.9",
     "geist": "^1.2.1",
     "lucide-react": "^0.436.0",
+    "masonic": "^4.0.1",
     "next": "latest",
     "next-themes": "^0.3.0",
     "prettier": "^3.3.3",
+    "qrcode.react": "^4.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-use": "^17.5.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
